--- a/src/App.css
+++ b/src/App.css
@@ -42,3 +42,10 @@
 		transform: rotate(360deg);
 	}
 }
+
+.card {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(12rem, 16rem));
+  gap: 2rem;
+  justify-content: center;
+}
